--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-    "recommendations": [
-        "ms-python.python",
-        "visualstudioexptteam.vscodeintellicode",
-        "ms-python.vscode-pylance",
-        "paulober.pico-w-go"
-    ]
+  "recommendations": ["humao.rest-client"]
 }
